# codex-multi-agents-monitor

./: .gitignore  .jscpd.json  .npmrc  AGENTS.md  CLAUDE.md  LICENSE  PROMPT.md  README.ko.md  README.md  REVIEW_BACKLOG.md  biome.json  components.json  eslint.config.mjs  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
scripts/: lint.mjs  (+9 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: codex_source.rs  desktop_threads.rs  ipc.rs  lib.rs  log_parser.rs  main.rs  normalize.rs  repository.rs  test_support.rs
src-tauri/src/application/: archived_sessions.rs  eval_grader.rs  eval_service.rs  live_sessions.rs  mod.rs  recent_sessions.rs  session_context_window.rs  session_relationships.rs  session_scoring.rs  skill_activity.rs  workspace_identity.rs
src-tauri/src/commands/: api.rs  error.rs  eval.rs  mod.rs  open.rs  open_tests.rs  scoring.rs  sessions.rs  workspace.rs
src-tauri/src/domain/: claude_mapping.rs  eval.rs  eval_candidate.rs  eval_scorecard.rs  ingest_policy.rs  mod.rs  models.rs  session.rs  session_score.rs  workspace.rs
src-tauri/src/events/: mod.rs
src-tauri/src/index_db/: mod.rs
src-tauri/src/infrastructure/: claude_session_discovery.rs  claude_session_jsonl.rs  codex_config.rs  eval_storage.rs  filesystem.rs  git.rs  mod.rs  score_storage.rs  session_jsonl.rs  state_sqlite.rs
src-tauri/src/ingest/: mod.rs  orchestrator.rs  rollout_decoder.rs
src-tauri/src/sources/: mod.rs
src-tauri/src/state/: archive_cache.rs  live_session_subscriptions.rs  mod.rs
(+992 files in other folders)
