[package]
name = "codex-multi-agent-monitor"
version = "0.1.0"
description = "Minimal Tauri + React starter"
authors = ["choegihwan"]
edition = "2021"

[lib]
name = "codex_multi_agent_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
walkdir = "2"
