[package]
name = "helloworld"
version = "0.1.0"
description = "Hello World starter"
authors = ["choegihwan"]
edition = "2021"

[lib]
name = "helloworld_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
