[package]
name = "codex-multi-agent-monitor"
version = "0.1.0"
description = "Codex multi-agent run debugging workbench"
authors = ["choegihwan"]
edition = "2021"

[lib]
name = "codex_multi_agent_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
